# Thiago-SKSE-Template

./: CMakeLists.txt  LICENSE  vcpkg.json
cmake/: headerlist.cmake  sourcelist.cmake  version.rc.in
cmake/lib/: autoCollectSources.cmake
include/: Configuration.h  Hooks.h  UI.h
src/: Hooks.cpp  UI.cpp  plugin.cpp
